Version 0.5-3 (2012-03-07)

o Added Mammograms data
o Extended mosaic.glm examples
o Added Alligator data
o Added DaytonSurvey data (5-way, 2x2x2x2x2)
o Extended vcd-tutorial vignette with a section on collapsing over factors

Version 0.5-2 (2010-11-28)

o Added loddsratio and related methods for log odds ratios, generalizing vcd::oddsratio from
  2 x 2 (x strata) tables to R x C (x strata) tables
o Added as.matrix.loddsratio, as.array.loddsratio methods
o Added some simple plot examples to example(loddsratio), anticipating a plot method
o Added data(Fungicide), a 2 x 2 x 2 x 2 table
o Renamed summarize() and related methods to summarise() to avoid conflict with plyr.
o Addition to vcd-tutorial vignette on use of aperm() with table objects
o Updated demo(yamaguchi-xie) to correct row/col nomenclature and add plot of BIC
o Added aperm() S3 generic to handle table objects
o Moved tv.dat to inst/doc/extdata to avoid warnings in R 2.12+

Version 0.5-1 (2010-09-17)

o Added Yamaguchi87 data (three-way mobility table)
o Added demo(yamaguchi-xie) illustrating fitting and visualization of the models of homogeneous and 
  log multiplicative layer effects fit in Xie (1992, Table 1)
o Added BIC to summarize() and friends
o Added Hauser79 data (two-way mobility table), plus some examples from Powers and Xie (2008)
o Added Crossings() to construct interactions for Goodman 1972 crossings model.
o Added datasets() to list datasets in packages
o Extended description and examples of Kway()
o Added meanResiduals() and extended mosaic.glm() (Heather Turner)
o summarize() gets a sortby argument for glmlist and loglmlist objects

Version 0.5-0 (2010-04-28)

o Fleshed out mosaic3d, allowing display of observed or expected, internally calculated or externally
  supplied residuals, specifying the initial 3D shape, etc.  This completes the 'top-level' work on
  mosaic3d(), borrowing code from vcd::strucplot.
o Added initial handling for zero cells in the table to mosaic3d().  